Changed tactics to a blank image to not have to git ignore

--- a/ZFM206SA50_FingerPrintScaner/ZFM206SA50_FingerPrintScaner.csproj
+++ b/ZFM206SA50_FingerPrintScaner/ZFM206SA50_FingerPrintScaner.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BitConverterHelpers.cs" />
+    <Compile Include="Enums\SystemStatus.cs" />
     <Compile Include="Returns\ReadValidTemplateCountReturn.cs" />
     <Compile Include="Returns\ImageReturn.cs" />
     <Compile Include="Returns\BasicCommandReturn.cs" />
