Finished the image download and did some image helpers

--- a/ZFM206SA50_FingerPrintScaner/ZFM206SA50_FingerPrintScaner.csproj
+++ b/ZFM206SA50_FingerPrintScaner/ZFM206SA50_FingerPrintScaner.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Returns\ReadSystemParamReturn.cs" />
     <Compile Include="RecievePackage.cs" />
     <Compile Include="Returns\StreamReturn.cs" />
+    <Compile Include="StaticImageHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ZFM-user-manualV15.pdf" />
